samples/_failures_safe/1761347336_5b55cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c2b1d11.c: In function ‘main’:
./samples/SAFE/__tmp_7c2b1d11.c:162:9: error: expected declaration or statement at end of input
  162 |         free_matrix(mat1);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_7c2b1d11.c:162:9: error: expected declaration or statement at end of input
